CHANGES.txt for Tux Paint

Tux Paint - A simple drawing program for children.

Copyright (c) 2004 by Bill Kendrick
bill@newbreedsoftware.com
http://www.newbreedsoftware.com/tuxpaint/


2004.October.23 (0.9.15)
  * Galician translation created.
    Leandro Regueiro <unho@gulo.org>

  * Chinese (Traditional) documentation updates.
    Song Huang <Song@ossacc.org>

2004.September.28 (0.9.14)
  * New Features:
    -------------
    * Added support for immutable "starter" images, which are installed
      globally with Tux Paint, and provide a starting canvas for images.

      A PNG file with alpha is continuously drawn over whatever changes are
      made to the current drawing.  For example, a black outline of a cartoon
      character could be made, to simulate a coloring book.
      (See 'jetplane.png')

      A second PNG file can be supplied which will be drawn on the normal
      part of the canvas (where a new picture would normally be all-white),
      allowing for simulated depth.  Drawing and magic tools all mutilate the
      background, as it's part of the normal canvas.  However, when editing
      a picture based on a 'starter' with a background layer, the eraser will
      bring back the background image.  In a sense, it's like having a photo
      on the bottom, a clear sheet to draw on in the middle, and a clear sheet
      with some more photo (which you can't draw on) on top.
      (See 'reef.png' and 'reef-back.jpg')
  
    * Added lockfile support, to prevent Tux Paint from being launched more
      than once every 30 seconds.  (Disable with "--nolockfile" command-line
      argument.)  Thanks to Darci Lindgren for suggestion the feature, and
      Mark K. Kim for suggesting it be time-based.
    
      (Lockfile is "lockfile.dat" in "~/.tuxpaint/" on Linux/Unix, and
      "userdata\" on Windows.)

    * Added "--nosave" option (suggested by Adam Moore).

  * Updated Features:
    -----------------
    * Added some more brushes.